# genderize-api

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt  utils.py
api/: __init__.py
