[project]
name = "genderize-api"
version = "0.1.0"
description = "Genderize.io API Integration & Data Processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
]
